# NUbots

./: .gitignore  CMakeLists.txt  Vagrantfile  Work Log.odt
cmake/Modules/: Compiler.cmake  FindOpenCV.cmake  FindOpenCV2.cmake  SharedLibraries.cmake
module/debug/KinematicsDebug/src/: KinematicsDebug.cpp
module/debug/MathTester/src/: MathTester.cpp
module/debug/NUsight/src/: NUsight.cpp  NUsight.h
module/input/GameController/src/: GameController.cpp
module/input/LinuxCamera/src/: LinuxCamera.cpp
module/input/NatNet/src/: NatNet.cpp
module/input/PushDetector/src/: PushDetector.cpp
module/localisation/KFBallLocalisation/src/: KFBallLocalisation.cpp  KFBallLocalisationEngine.h
module/localisation/MMKFRobotLocalisation/src/: MMKFRobotLocalisation.cpp  MMKFRobotLocalisationEngine.cpp  MMKFRobotLocalisationEngine.h  MultiModalRobotModel.h  RobotModel.cpp  RobotModel.h
module/localisation/NUcapLocalisation/src/: NUcapLocalisation.cpp
module/localisation/SideChecker/src/: SideChecker.cpp
module/motion/HeadController/src/: HeadController.cpp
module/motion/IKKick/src/: IKKick.cpp  IKKickControllers.cpp  IKKickControllers.h
module/motion/ScriptEngine/src/: ScriptEngine.cpp
module/motion/WalkEngine/src/: FootFallPlanner.cpp  WalkEngine.cpp  WalkEngine.h
module/output/eSpeak/src/: eSpeak.cpp
module/research/AutoClassifierProvider/src/: AutoClassifierProvider.cpp
module/research/LayerAutoClassifier/src/: LayerAutoClassifier.cpp
module/vision/GoalDetector/: CMakeLists.txt
module/vision/GoalMatcher/: CMakeLists.txt  README.md
module/vision/LBPClassifier/: README.md
modules/debug/NUcap/src/: NUcap.cpp
modules/localisation/Odometry/: README.md
nuclear/message/: CMakeLists.txt  build_message_class.py  repackage_message.py
puppet/manifests/: nubots.pp
report/graph/: build_role_graph.py
roles/: autoclassifier.role  balllocalisation.role  cameratest.role  classifiertester.role  configsystemtest.role  displaytest.role  dopetest.role  featuredetectortester.role  gamecontrollertest.role  goalmatchertest.role  headbehtest.role  headbehtestsim.role  jump.role  keyboardclassifier.role  keyboardwalk.role  keyboardwalkfake.role  kickcommander.role  kickcommandersimulator.role  kicktest.role  kinematicsdebug.role  kinematicsmodel.role  lookatball.role  lookatgoal.role  lookattest.role  mathtest.role  nbzclassifiertester.role  nbzfeaturedetectortester.role  nubuggertest.role  nucap.role  nucaplookatball.role  nucaprecorder.role  nucapsimulator.role  odometrysimulator.role  orientationtest.role  playback.role  ps3walk.role  ps3walkfake.role  pushrecovery.role  robocup.role  robotlocalisation.role  (+7 more)
shared/: CMakeLists.txt
shared/extension/: CMakeLists.txt  Configuration.h  FileWatch.h
shared/extension/FileWatcher/: FileWatcher.cpp  FileWatcher.h
shared/message/: Geometry.proto  MessageOptions.proto  Rotation.proto  Transform.proto
shared/message/audio/: Beat.proto
shared/message/behaviour/: Behaviour.proto  FieldTarget.proto  FixedWalkCommand.proto  KickPlan.proto  Look.proto  MotionCommand.proto  ServoCommand.proto  SoccerObjectPriority.proto  Subsumption.proto  WalkPath.proto
shared/message/input/: CameraParameters.proto  Image.proto  LimbID.proto  LimbID2.h  MotionCapture.proto  PushDetection.proto  Sensors.h  Sensors.proto  ServoID.proto  Sound.proto
shared/message/input/gameevents/: GameEvents.proto
shared/message/localisation/: FieldObject.proto  ResetRobotHypotheses.proto  SideChecker.proto
shared/message/motion/: DiveCommand.proto  GetupCommand.proto  HeadCommand.proto  KickCommand.proto  Script.proto  ServoTarget.proto  WalkCommand.proto
shared/message/output/: Say.proto
shared/message/platform/darwin/: DarwinSensors.proto  KinematicsModel.proto
shared/message/research/: AutoClassifierPixels.proto
shared/message/support/: FieldDescription.proto  GlobalConfig.proto  SimulatorState.h
shared/message/support/nuclear/: ReactionStatistics.proto
shared/message/support/nusight/: Command.proto  ConfigurationState.proto  DataPoint.proto  DrawObjects.proto  Overview.proto  Ping.proto  ReactionHandles.proto
shared/message/support/optimisation/: DOpE.proto
shared/message/support/proto/: SimulatorState.proto
shared/message/vision/: ClassifiedImage.proto  LookUpTable.proto  VisionObjects.h  VisionObjects.proto
shared/messages/: CMakeLists.txt  MessageOptions.proto  Rotation.proto
shared/messages/behaviour/: FieldTarget.proto  FixedWalkCommand.proto  KickPlan.proto  Look.proto  ServoCommand.proto  SoccerObjectPriority.proto
shared/messages/input/: CameraParameters.proto  MotionCapture.proto  PushDetection.proto  Sensors.proto  ServoID.proto
shared/messages/input/gameevents/: GameEvents.proto
shared/messages/localisation/: FieldObject.proto  OdometryUpdate.h  ResetRobotHypotheses.proto  SideChecker.proto
shared/messages/motion/: GetupCommand.proto  HeadCommand.proto  Script.proto  WalkCommand.proto
shared/messages/output/: Say.proto
shared/messages/platform/darwin/: DarwinSensors.proto  KinematicsModel.proto
shared/messages/support/: GlobalConfig.proto
shared/messages/support/nuclear/: ReactionStatistics.proto
shared/messages/support/nusight/: Command.proto  DataPoint.proto  DrawObjects.proto  Overview.proto  ReactionHandles.proto
shared/messages/support/optimisation/: DOpE.proto
shared/messages/vision/: ClassifiedImage.proto
shared/utility/conversion/: proto_armadillo.h  proto_rotation.h  proto_time.h  proto_transform.h  proto_yaml.h  yaml_armadillo.h  yaml_expression.h
shared/utility/math/: angle.h  coordinates.h
shared/utility/math/filter/: EKF.h
shared/utility/math/geometry/: Intersection.cpp
shared/utility/math/learning/: KMeans.cpp
shared/utility/math/optimisation/: GaussianSampler.h  Optimiser.h
shared/utility/motion/: Balance.h
shared/utility/nubugger/: NUhelpers.h
shared/utility/nusight/: NUhelpers.h
shared/utility/vision/: MockFeatureExtractor.cpp  MockFeatureExtractor.h
tools/cmake/: Compiler.cmake
tools/scripts/: build_message_class.py  generate_swig.py  repackage_message.py
(+215 files in other folders)
